gl.css
body {
    font-family     :  Courier New, Courier, monospace;
 /* white-space     :  pre; */
    background-image:  url("checkerboard.gif");
}

p {
    background-color:  #000000;
    color           :  #FFFF00;
}

canvas {
    border          :  0px solid #400080;
    background-color:  transparent;
    display         :  block;
    margin          :  auto;
}

a:link {
    color           :  #00FF00;
    background-color:  #000000;
}
a:visited {
    color           :  #008000;
    background-color:  #000000;
}

